test/associative/bharshbarg/domains/badSubsetCall.good
badSubsetCall.chpl:4: error: isSubset called with different rectangular domain types
