test/associative/bharshbarg/domains/badSubsetCall.chpl
var d : domain(1) = 1..10;

d.isSubset({1,2,3,4,5});
